import org.jetbrains.kotlin.gradle.plugin.KotlinSourceSet
import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

group = "luna"
version = "1.0"

plugins {
    val javafxVersion = "0.0.8"
    val kotlinVersion = "1.3.50"

    java
    application

    kotlin("jvm") version kotlinVersion

    id("org.openjfx.javafxplugin") version javafxVersion
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    val javafxVersion = "11.0.1"

    implementation("com.google.code.gson:gson:2.8.6")
    implementation("org.apache.logging.log4j:log4j-core:2.12.1")
    implementation("org.slf4j:slf4j-nop:1.7.28")
    implementation("com.lmax:disruptor:3.4.2")
    implementation("io.netty:netty-all:4.1.42.Final")
    implementation("com.google.guava:guava:28.1-jre")
    implementation("com.moandjiezana.toml:toml4j:0.7.2")
    implementation("org.mindrot:jbcrypt:0.4")
    implementation("org.openjfx:javafx-controls:$javafxVersion")
    implementation("org.openjfx:javafx-fxml:$javafxVersion")
    implementation("org.openjfx:javafx-swing:$javafxVersion")
    implementation("com.zaxxer:HikariCP:3.4.1")
    implementation("org.mockito:mockito-core:3.1.0")

    implementation(kotlin("compiler-embeddable"))
    implementation(kotlin("reflect"))
    implementation(kotlin("script-util"))
    implementation(kotlin("scripting-compiler-embeddable"))
    implementation(kotlin("stdlib-jdk8"))

    testImplementation("org.junit.jupiter:junit-jupiter-api:+")
    testImplementation("org.junit.jupiter:junit-jupiter-params:+")
    testImplementation("org.junit.jupiter:junit-jupiter-engine:+")
}

application {
    mainClassName = "io.luna.Luna"
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

sourceSets {
    main {
        withConvention(KotlinSourceSet::class) {
            kotlin.srcDirs("plugins")
        }
    }
}

javafx {
    version = "11"
    modules("javafx.controls", "javafx.fxml", "javafx.swing")
}

tasks.withType<JavaCompile> {
    options.compilerArgs = mutableListOf("-Xlint:deprecation", "-Xlint:unchecked")
    options.encoding = "UTF-8"
}

tasks.withType<KotlinCompile> {
    kotlinOptions.jvmTarget = "1.8"
}

tasks.named<Test>("test") {
    useJUnitPlatform()
}